--- a/notebooks/sleep_vs_wake_vs_movement_classification.ipynb
+++ b/notebooks/sleep_vs_wake_vs_movement_classification.ipynb
@@ -912,18 +912,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 64,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Computing for slp01a...\n",
+      "Computing for slp01b...\n",
+      "Computing for slp02a...\n",
+      "Computing for slp02b...\n",
+      "Computing for slp03...\n",
+      "Computing for slp04...\n",
+      "Computing for slp32...\n",
+      "Computing for slp41...\n",
+      "Computing for slp45...\n",
+      "Computing for slp48...\n",
+      "Computing for slp60...\n",
+      "Computing for slp67x...\n"
+     ]
+    }
+   ],
    "source": [
     "feature_mean_resp = {}\n",
     "feature_median_resp = {}\n",
     "feature_max_resp = {}\n",
+    "feature_hist_resp = {}\n",
+    "\n",
+    "nbins = 10\n",
     "\n",
     "for key in data_keys:\n",
-    "#     print(\"Computing for \"+ key + \"...\")\n",
+    "    print(\"Computing for \"+ key + \"...\")\n",
     "    resp_sig = resp_data_set[key]\n",
     "    fft_resp = np.fft.fft(resp_sig)\n",
     "    fft_freqs = np.fft.fftfreq(len(resp_sig), 1/fs)\n",
@@ -939,18 +961,181 @@
     "    time_windows = su.array_rolling_window(time_data_set[key], win_size)\n",
     "\n",
     "    selected_index = np.arange(0, len(resp_windows), win_int)\n",
-    "    resp_windows\n",
-    "    "
+    "    resp_windows = resp_windows[selected_index, :]\n",
+    "    times = time_windows[selected_index, -1]\n",
+    "    \n",
+    "    hist_windows = np.apply_along_axis(lambda a: np.histogram(a, bins=nbins)[0], 1, resp_windows)\n",
+    "    mean_windows = np.nanmean(resp_windows, axis = 1)\n",
+    "    median_windows = np.nanmedian(resp_windows, axis = 1)\n",
+    "    max_windows = np.nanmax(resp_windows, axis = 1)\n",
+    "    \n",
+    "    feature_hist_resp[key] = {'_feat' : hist_windows, '_time': times}\n",
+    "    feature_mean_resp[key] = {'_feat' : mean_windows, '_time': times}\n",
+    "    feature_median_resp[key] = {'_feat' : median_windows, '_time': times}\n",
+    "    feature_max_resp[key] = {'_feat' : max_windows, '_time': times}\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Add more ECG-based features"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 71,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Computing for slp01a...\n",
+      "Computing for slp01b...\n",
+      "Computing for slp02a...\n",
+      "Computing for slp02b...\n",
+      "Computing for slp03...\n",
+      "Computing for slp04...\n",
+      "Computing for slp32...\n",
+      "Computing for slp41...\n",
+      "Computing for slp45...\n",
+      "Computing for slp48...\n",
+      "Computing for slp60...\n",
+      "Computing for slp67x...\n"
+     ]
+    }
+   ],
+   "source": [
+    "feature_mean_heart = {}\n",
+    "feature_median_heart = {}\n",
+    "feature_max_heart = {}\n",
+    "feature_hist_heart = {}\n",
+    "\n",
+    "for key in data_keys:\n",
+    "    print(\"Computing for \"+ key + \"...\")\n",
+    "    \n",
+    "    # Divide into windows\n",
+    "    ecg_windows = su.array_rolling_window(ecg_data_set[key], win_size)\n",
+    "    time_windows = su.array_rolling_window(time_data_set[key], win_size)\n",
+    "\n",
+    "    selected_index = np.arange(0, len(ecg_windows), win_int)\n",
+    "    ecg_windows = ecg_windows[selected_index, :]\n",
+    "    times = time_windows[selected_index, -1]\n",
+    "    \n",
+    "    hist_windows = np.apply_along_axis(lambda a: np.histogram(a, bins=nbins)[0], 1, ecg_windows)\n",
+    "    mean_windows = np.nanmean(ecg_windows, axis = 1)\n",
+    "    median_windows = np.nanmedian(ecg_windows, axis = 1)\n",
+    "    max_windows = np.nanmax(ecg_windows, axis = 1)\n",
+    "    \n",
+    "    feature_hist_heart[key] = {'_feat' : hist_windows, '_time': times}\n",
+    "    feature_mean_heart[key] = {'_feat' : mean_windows, '_time': times}\n",
+    "    feature_median_heart[key] = {'_feat' : median_windows, '_time': times}\n",
+    "    feature_max_heart[key] = {'_feat' : max_windows, '_time': times}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "merge_features8 = []\n",
+    "merge_features9 = []\n",
+    "merge_features10 = []\n",
+    "merge_features11 = []\n",
+    "merge_features12 = []\n",
+    "merge_features13 = []\n",
+    "merge_features14 = np.zeros([1, nbins])\n",
+    "merge_features15 = np.zeros([1, nbins])\n",
+    "\n",
+    "for key in data_keys:\n",
+    "    merge_features8 += list(feature_max_heart[key]['_time'])\n",
+    "    merge_features9 += list(feature_max_resp[key]['_feat'])\n",
+    "    merge_features10 += list(feature_mean_heart[key]['_feat'])\n",
+    "    merge_features11 += list(feature_mean_resp[key]['_feat'])\n",
+    "    merge_features12 += list(feature_median_heart[key]['_feat'])\n",
+    "    merge_features13 += list(feature_median_resp[key]['_feat'])\n",
+    "    \n",
+    "    merge_features14 = np.concatenate((merge_features14, feature_hist_heart[key]['_feat']), axis = 0)\n",
+    "    merge_features15 = np.concatenate((merge_features15, feature_hist_resp[key]['_feat']), axis = 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "sleep_features2 = np.concatenate((sleep_features,\n",
+    "                                 np.reshape(merge_features8, [len(merge_features1), 1]),\n",
+    "                                 np.reshape(merge_features9, [len(merge_features2), 1]),\n",
+    "                                 np.reshape(merge_features10, [len(merge_features3), 1]),\n",
+    "                                 np.reshape(merge_features11, [len(merge_features4), 1]),\n",
+    "                                 np.reshape(merge_features12, [len(merge_features5), 1]),\n",
+    "                                 np.reshape(merge_features13, [len(merge_features6), 1]),\n",
+    "                                 merge_features14[1:, :], merge_features15[1:, :]), axis = 1)\n",
+    "\n",
+    "sleep_data2 = sleep_features2[np.isfinite(sleep_features2).all(axis=1)]\n",
+    "sleep_labels2 = np.reshape(merge_labels, [len(merge_labels), 1])[np.isfinite(sleep_features2).all(axis=1)]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Classification with added features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "sleep_data_scaled2 = StandardScaler().fit_transform(sleep_data2)\n",
+    "train_set, test_set, train_label, test_label = train_test_split(sleep_data_scaled2, sleep_labels2, test_size=0.33, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training Nearest Neighbors\n",
+      "('Nearest Neighbors', 0.93617220841345028)\n",
+      "Training Decision Tree\n",
+      "('Decision Tree', 0.72736794384780123)\n",
+      "Training Random Forest\n",
+      "('Random Forest', 0.7832856539886508)\n",
+      "Training AdaBoost\n",
+      "('AdaBoost', 0.23816223483249699)\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in [0, 1, 2, 3]:\n",
+    "    print('Training ' + names[i])\n",
+    "    clf = classifiers[i]\n",
+    "    clf.fit(train_set, np.ndarray.flatten(train_label))\n",
+    "    prediction = clf.predict(test_set)\n",
+    "    print(names[i], accuracy_score(test_label, prediction))\n",
+    "    "
+   ]
   },
   {
    "cell_type": "code",
