--- a/notebooks/sleep_stage_classification_ldrwm_separate_features_from_stages.ipynb
+++ b/notebooks/sleep_stage_classification_ldrwm_separate_features_from_stages.ipynb
@@ -1027,15 +1027,15 @@
     }
    ],
    "source": [
-    "feature_sampen_ecg = {}\n",
+    "# feature_sampen_ecg = {}\n",
     "\n",
     "\n",
-    "for key in data_keys:\n",
-    "    print(\"Computing for \"+ key + \"...\")\n",
-    "    ecg_data = ecg_data_set_epochs[key]\n",
+    "# for key in data_keys:\n",
+    "#     print(\"Computing for \"+ key + \"...\")\n",
+    "#     ecg_data = ecg_data_set_epochs[key]\n",
     "\n",
-    "    sampen_val = ecg_data.ecg.apply(lambda x: (nolds.sampen(x)))\n",
-    "    feature_sampen_ecg[key] = {'_feat' : list(sampen_val)}           \n",
+    "#     sampen_val = ecg_data.ecg.apply(lambda x: (nolds.sampen(x)))\n",
+    "#     feature_sampen_ecg[key] = {'_feat' : list(sampen_val)}           \n",
     "    "
    ]
   },
@@ -1047,7 +1047,7 @@
    },
    "outputs": [],
    "source": [
-    "pickle.dump( feature_sampen_ecg, open( features_dir + \"feature_sampen_ecg.pkl\", \"wb\" ))    \n"
+    "# pickle.dump( feature_sampen_ecg, open( features_dir + \"feature_sampen_ecg.pkl\", \"wb\" ))    \n"
    ]
   },
   {
